// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClockContainer /> decrements when the game starts 1`] = `
<ClockContainer
  started={true}
  stopGame={[MockFunction]}
>
  <Clock
    secs={59}
    total={60}
  >
    <styled.div>
      <div
        className="sc-gqjmRU dPXKxW"
      >
        <styled.svg
          viewBox="0 0 100 100"
        >
          <svg
            className="sc-jTzLTM jFWEQC"
            viewBox="0 0 100 100"
          >
            <styled.circle
              className="clock-gray"
              cx="50%"
              cy="50%"
              r="40"
            >
              <circle
                className="clock-gray sc-VigVT iMLRaJ"
                cx="50%"
                cy="50%"
                r="40"
              />
            </styled.circle>
            <styled.circle
              className="clock-green"
              cx="50%"
              cy="50%"
              r="40"
              style={
                Object {
                  "strokeDasharray": 251,
                  "strokeDashoffset": 246.81666666666666,
                }
              }
              transform="rotate(-90 50 50)"
            >
              <circle
                className="clock-green sc-VigVT iMLRaJ"
                cx="50%"
                cy="50%"
                r="40"
                style={
                  Object {
                    "strokeDasharray": 251,
                    "strokeDashoffset": 246.81666666666666,
                  }
                }
                transform="rotate(-90 50 50)"
              />
            </styled.circle>
            <styled.text
              textAnchor="middle"
              x="50%"
              y="60%"
            >
              <text
                className="sc-fjdhpX kwMnmn"
                textAnchor="middle"
                x="50%"
                y="60%"
              >
                59
              </text>
            </styled.text>
          </svg>
        </styled.svg>
        <styled.span>
          <span
            className="sc-jzJRlG bfEpLC"
          >
            Time left: 00:
            59
          </span>
        </styled.span>
      </div>
    </styled.div>
  </Clock>
</ClockContainer>
`;

exports[`<ClockContainer /> decrements when the game starts 2`] = `
<ClockContainer
  started={true}
  stopGame={[MockFunction]}
>
  <Clock
    secs={58}
    total={60}
  >
    <styled.div>
      <div
        className="sc-gqjmRU dPXKxW"
      >
        <styled.svg
          viewBox="0 0 100 100"
        >
          <svg
            className="sc-jTzLTM jFWEQC"
            viewBox="0 0 100 100"
          >
            <styled.circle
              className="clock-gray"
              cx="50%"
              cy="50%"
              r="40"
            >
              <circle
                className="clock-gray sc-VigVT iMLRaJ"
                cx="50%"
                cy="50%"
                r="40"
              />
            </styled.circle>
            <styled.circle
              className="clock-green"
              cx="50%"
              cy="50%"
              r="40"
              style={
                Object {
                  "strokeDasharray": 251,
                  "strokeDashoffset": 242.63333333333333,
                }
              }
              transform="rotate(-90 50 50)"
            >
              <circle
                className="clock-green sc-VigVT iMLRaJ"
                cx="50%"
                cy="50%"
                r="40"
                style={
                  Object {
                    "strokeDasharray": 251,
                    "strokeDashoffset": 242.63333333333333,
                  }
                }
                transform="rotate(-90 50 50)"
              />
            </styled.circle>
            <styled.text
              textAnchor="middle"
              x="50%"
              y="60%"
            >
              <text
                className="sc-fjdhpX kwMnmn"
                textAnchor="middle"
                x="50%"
                y="60%"
              >
                58
              </text>
            </styled.text>
          </svg>
        </styled.svg>
        <styled.span>
          <span
            className="sc-jzJRlG bfEpLC"
          >
            Time left: 00:
            58
          </span>
        </styled.span>
      </div>
    </styled.div>
  </Clock>
</ClockContainer>
`;

exports[`<ClockContainer /> decrements when the game starts 3`] = `
<ClockContainer
  started={true}
  stopGame={[MockFunction]}
>
  <Clock
    secs={57}
    total={60}
  >
    <styled.div>
      <div
        className="sc-gqjmRU dPXKxW"
      >
        <styled.svg
          viewBox="0 0 100 100"
        >
          <svg
            className="sc-jTzLTM jFWEQC"
            viewBox="0 0 100 100"
          >
            <styled.circle
              className="clock-gray"
              cx="50%"
              cy="50%"
              r="40"
            >
              <circle
                className="clock-gray sc-VigVT iMLRaJ"
                cx="50%"
                cy="50%"
                r="40"
              />
            </styled.circle>
            <styled.circle
              className="clock-green"
              cx="50%"
              cy="50%"
              r="40"
              style={
                Object {
                  "strokeDasharray": 251,
                  "strokeDashoffset": 238.45,
                }
              }
              transform="rotate(-90 50 50)"
            >
              <circle
                className="clock-green sc-VigVT iMLRaJ"
                cx="50%"
                cy="50%"
                r="40"
                style={
                  Object {
                    "strokeDasharray": 251,
                    "strokeDashoffset": 238.45,
                  }
                }
                transform="rotate(-90 50 50)"
              />
            </styled.circle>
            <styled.text
              textAnchor="middle"
              x="50%"
              y="60%"
            >
              <text
                className="sc-fjdhpX kwMnmn"
                textAnchor="middle"
                x="50%"
                y="60%"
              >
                57
              </text>
            </styled.text>
          </svg>
        </styled.svg>
        <styled.span>
          <span
            className="sc-jzJRlG bfEpLC"
          >
            Time left: 00:
            57
          </span>
        </styled.span>
      </div>
    </styled.div>
  </Clock>
</ClockContainer>
`;

exports[`<ClockContainer /> displays 60 by default 1`] = `
<ClockContainer
  stopGame={[MockFunction]}
>
  <Clock
    secs={60}
    total={60}
  >
    <styled.div>
      <div
        className="sc-gqjmRU dPXKxW"
      >
        <styled.svg
          viewBox="0 0 100 100"
        >
          <svg
            className="sc-jTzLTM jFWEQC"
            viewBox="0 0 100 100"
          >
            <styled.circle
              className="clock-gray"
              cx="50%"
              cy="50%"
              r="40"
            >
              <circle
                className="clock-gray sc-VigVT iMLRaJ"
                cx="50%"
                cy="50%"
                r="40"
              />
            </styled.circle>
            <styled.circle
              className="clock-green"
              cx="50%"
              cy="50%"
              r="40"
              style={
                Object {
                  "strokeDasharray": 251,
                  "strokeDashoffset": 251,
                }
              }
              transform="rotate(-90 50 50)"
            >
              <circle
                className="clock-green sc-VigVT iMLRaJ"
                cx="50%"
                cy="50%"
                r="40"
                style={
                  Object {
                    "strokeDasharray": 251,
                    "strokeDashoffset": 251,
                  }
                }
                transform="rotate(-90 50 50)"
              />
            </styled.circle>
            <styled.text
              textAnchor="middle"
              x="50%"
              y="60%"
            >
              <text
                className="sc-fjdhpX kwMnmn"
                textAnchor="middle"
                x="50%"
                y="60%"
              >
                60
              </text>
            </styled.text>
          </svg>
        </styled.svg>
        <styled.span>
          <span
            className="sc-jzJRlG bfEpLC"
          >
            Time left: 00:
            60
          </span>
        </styled.span>
      </div>
    </styled.div>
  </Clock>
</ClockContainer>
`;

exports[`<ClockContainer /> displays 60 when the game stops 1`] = `
<ClockContainer
  started={true}
  stopGame={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
    }
  }
>
  <Clock
    secs={0}
    total={60}
  >
    <styled.div>
      <div
        className="sc-gqjmRU dPXKxW"
      >
        <styled.svg
          viewBox="0 0 100 100"
        >
          <svg
            className="sc-jTzLTM jFWEQC"
            viewBox="0 0 100 100"
          >
            <styled.circle
              className="clock-gray"
              cx="50%"
              cy="50%"
              r="40"
            >
              <circle
                className="clock-gray sc-VigVT iMLRaJ"
                cx="50%"
                cy="50%"
                r="40"
              />
            </styled.circle>
            <styled.circle
              className="clock-green"
              cx="50%"
              cy="50%"
              r="40"
              style={
                Object {
                  "strokeDasharray": 251,
                  "strokeDashoffset": 0,
                }
              }
              transform="rotate(-90 50 50)"
            >
              <circle
                className="clock-green sc-VigVT iMLRaJ"
                cx="50%"
                cy="50%"
                r="40"
                style={
                  Object {
                    "strokeDasharray": 251,
                    "strokeDashoffset": 0,
                  }
                }
                transform="rotate(-90 50 50)"
              />
            </styled.circle>
            <styled.text
              textAnchor="middle"
              x="50%"
              y="60%"
            >
              <text
                className="sc-fjdhpX kwMnmn"
                textAnchor="middle"
                x="50%"
                y="60%"
              >
                0
              </text>
            </styled.text>
          </svg>
        </styled.svg>
        <styled.span>
          <span
            className="sc-jzJRlG bfEpLC"
          >
            Time left: 00:
            00
          </span>
        </styled.span>
      </div>
    </styled.div>
  </Clock>
</ClockContainer>
`;

exports[`<ClockContainer /> stops when time have been elapsed 1`] = `
<ClockContainer
  started={false}
  stopGame={[MockFunction]}
>
  <Clock
    secs={60}
    total={60}
  >
    <styled.div>
      <div
        className="sc-gqjmRU dPXKxW"
      >
        <styled.svg
          viewBox="0 0 100 100"
        >
          <svg
            className="sc-jTzLTM jFWEQC"
            viewBox="0 0 100 100"
          >
            <styled.circle
              className="clock-gray"
              cx="50%"
              cy="50%"
              r="40"
            >
              <circle
                className="clock-gray sc-VigVT iMLRaJ"
                cx="50%"
                cy="50%"
                r="40"
              />
            </styled.circle>
            <styled.circle
              className="clock-green"
              cx="50%"
              cy="50%"
              r="40"
              style={
                Object {
                  "strokeDasharray": 251,
                  "strokeDashoffset": 251,
                }
              }
              transform="rotate(-90 50 50)"
            >
              <circle
                className="clock-green sc-VigVT iMLRaJ"
                cx="50%"
                cy="50%"
                r="40"
                style={
                  Object {
                    "strokeDasharray": 251,
                    "strokeDashoffset": 251,
                  }
                }
                transform="rotate(-90 50 50)"
              />
            </styled.circle>
            <styled.text
              textAnchor="middle"
              x="50%"
              y="60%"
            >
              <text
                className="sc-fjdhpX kwMnmn"
                textAnchor="middle"
                x="50%"
                y="60%"
              >
                60
              </text>
            </styled.text>
          </svg>
        </styled.svg>
        <styled.span>
          <span
            className="sc-jzJRlG bfEpLC"
          >
            Time left: 00:
            60
          </span>
        </styled.span>
      </div>
    </styled.div>
  </Clock>
</ClockContainer>
`;
